[gd_scene load_steps=4 format=3 uid="uid://dajm80l4hygwg"]

[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_dnse0"]
[ext_resource type="FontFile" uid="uid://d0s2xkw8yq4b1" path="res://fonts/Xolonium-Regular.ttf" id="2_ecow8"]
[ext_resource type="Texture2D" uid="uid://cohnio2p87glc" path="res://Assets/icon.svg" id="3_axqyu"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_dnse0")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_ecow8")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -244.0
offset_right = 240.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ecow8")
theme_override_font_sizes/font_size = 64
text = "Dodge the asteroids!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -148.0
offset_right = 100.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_ecow8")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LeftArrow" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -12.0
offset_right = -104.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="LeftArrow"]
position = Vector2(12, 12)
scale = Vector2(0.1875, 0.1875)
texture = ExtResource("3_axqyu")

[node name="RightArrow" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 104.0
offset_top = -11.0
offset_right = 128.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="RightArrow"]
position = Vector2(12, 12)
scale = Vector2(0.1875, 0.183594)
texture = ExtResource("3_axqyu")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="LeftArrow" to="." method="_on_left_arrow_pressed"]
[connection signal="pressed" from="RightArrow" to="." method="_on_right_arrow_pressed"]
